# multi-mock-rust

./: .gitignore  Cargo.toml  config.toml
.cargo/: config.toml
src/: configuration.rs  connection.rs  encoding.rs  main.rs
src/route/: mod.rs  person.rs  user.rs
