[package]
name = "axum_prod_zero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
config = "0.13.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.17"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
